# lab_5

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
